# ocean_emulators

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_docs.yaml  release.yaml  tests.yaml  trigger-book-build  trigger-book-build.yaml  trigger-preview.yaml
_preview/12/: intro.html  objects.inv  search.html
_preview/14/: genindex.html  intro.html
_preview/27/: genindex.html  intro.html  search.html  searchindex.js
_preview/27/_sources/: intro.md
_preview/31/: genindex.html  intro.html
_preview/35/: .buildinfo
_preview/40/: genindex.html
_preview/41/: .buildinfo  intro.html  search.html
_preview/46/: objects.inv
_preview/48/: searchindex.js
_preview/7/: genindex.html  intro.html  search.html  searchindex.js
book/: environment.yaml  references.bib
docs/: intro.md
notebooks/: find_repeat_year_for_rollout_stability_test.ipynb  nan-test-OM4.ipynb  preprocessing.ipynb  preprocessing_om4.ipynb  transfer-om4-from-greene.ipynb  validation_plots.ipynb  vesri_plots.ipynb
notebooks/data-transfer/: pm-gauth.ipynb
ocean_emulators/: dummy.py  plotting.py  postprocessing.py  preprocessing.py  utils.py
tests/: data.py  test_dummy.py  test_postprocessing.py  test_preprocessing.py  test_utils.py
